[package]
name = "web_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iron = "0.6.1"
router = "0.6.0"
logger = "0.4.0"
env_logger = "0.9.1"
rustc-serialize = "0.3.24"
chrono = "0.4.22"
uuid = "1.2.1"
serde = "1.0.145"
serde_json = "1.0.86"
